# django-react-boilerplate

./: .babelrc  .coveragerc  .editorconfig  .eslintrc.js  .gitignore  .tool-versions  Makefile  PULL_REQUEST_TEMPLATE.md  README.EN.md  README.md  create_project.sh  cypress.json  env.example  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements.txt  server.js  vite.config.js  webpack.config.js  webpack.config.production.js
assets/src/js/: index.js
assets/src/scss/: index.scss
core/templatetags/: render_vite_bundle.py
cypress/fixtures/WelcomePage/: sample-api-view.json
cypress/integration/SampleNestedPage/: index.spec.js
cypress/integration/WelcomePage/: index.spec.js
cypress/plugins/: index.js
cypress/support/: index.js
hooks/: pre-push.sh
project/: settings.py  urls.py
react-app/: index.html
react-app/js/: Header.jsx  Routes.jsx  main.jsx  rootReducer.js
react-app/js/WelcomePage/: actions.js  index.jsx  reducers.js  types.js
react-app/js/WelcomePage/__snapshots__/: index.test.js.snap
react-app/scss/components/: _welcome.scss
react-app/src/js/: Header.js  NoMatch404.jsx  Routes.js  Routes.jsx  index.js  rootReducer.js  setupTests.js
react-app/src/js/SampleNestedPage/: index.js
react-app/src/js/WelcomePage/: index.js  index.test.js  reducers.js
react-app/src/js/sample-nested-page/: index.js
react-app/src/js/welcome/: actions.js  index.js  index.test.js  reducers.js
react-app/src/scss/: _base.scss  _overrides.scss  main.scss
templates/frontend/: index.html
tests/: test_sample.py
(+5 files in other folders)
