[tool.poetry]
name = "django-react-webpack"
version = "0.1.0"
description = ""
authors = ["Labcodes <support@labcodes.com.br>"]

[tool.poetry.dependencies]
python = "^3.6.14"
Django = "^3.2.5"
django-heroku = "^0.3.1"
django-pwa = "^1.0.10"
django-webpack-loader = "^1.1.0"
djangorestframework = "^3.12.4"
dj-database-url = "^0.5.0"
python-decouple = "^3.4"
black = "^21.7b0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
